added get users and user by id in swagger
